# bowtie

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  LVKernel.cpp  LVKernel.h  MANUAL  MANUAL.markdown  Makefile  Makefile.am  NEWS  README  TODO  TUTORIAL  VERSION  aligner.h  aligner_0mm.h  aligner_1mm.h  aligner_23mm.h  aligner_metrics.h  aligner_seed_mm.h  alphabet.c  alphabet.cpp  alphabet.h  annot.cpp  annot.h  assert_helpers.h  auto_array.h  binary_sa_search.h  bitpack.h  bitset.h  blockwise_sa.cpp  blockwise_sa.h  bowtie  bowtie-build  bowtie-inspect  bowtie.doxyfile  bowtie_build_main.cpp  bowtie_convert.cpp  bowtie_inspect.cpp  (+117 more)
.github/workflows/: random_tests.yml  simple_tests.yml
CSAMapper.xcodeproj/: cole.mode1v3  cole.pbxuser  cole.perspectivev3  project.pbxproj
SeqAn-1.1/seqan/: basic.h  file.h  find.h  index.h  modifier.h  pipe.h  platform.h  system.h
doc/: manual.html  release.txt  strip_markdown.pl  style.css
doc/website/: foot.ssi  index.html  index.shtml  latest-version.txt  manual.html  manual.shtml  manual.ssi  md5s.shtml  md5s.ssi  news.shtml  old_news.ssi  other_tools.shtml  other_tools.ssi  push.sh  push_langmead.sh  recent_news.ssi  rhsidebar.ssi  top.ssi  tutorial.html  tutorial.shtml
example/index/: lambda_virus.1.ebwt  lambda_virus.2.ebwt  lambda_virus.rev.1.ebwt  lambda_virus.rev.2.ebwt
examples/: test_offby1.fa
examples/multifile/: Makefile  pat1.fa  pat2.fa  text1.fa  text2.fa
examples/simple0/: simple0.fa
getusage/: getusage.c
indexes/: e_coli.1.ebwt  e_coli.2.ebwt  e_coli.README  e_coli.rev.1.ebwt  e_coli.rev.2.ebwt
maq/: const.c  read_bfq.h
maq_convert/: README  algo.hh  bfa.c  bfa.cpp  bfa.h  bowtie_convert.cpp  bowtie_inspect.cpp  const.c  const.h  maqmap.h  read_bfq.h
papers/algtex/: .cvsignore  algorithmic.sty  algorithms.tex  bwtalgs.eps  bwtalgs.ps  bwtalgs.tex  bwtalgs.tiff
papers/diagrams/: BWT_allin1.eps  BWT_allin1.graffle  BWT_search.graffle  BWT_translate.graffle  BWT_walkleft.graffle  backtracking.eps  backtracking.graffle  backtracking.tiff  maqlike_flow.eps  maqlike_flow.graffle  maqlike_flow2.graffle  maqlike_flow_fw.eps  maqlike_flow_fw.graffle
reads/: e_coli_1000.fa  e_coli_1000.fq  e_coli_10000snp.csfasta  e_coli_1000_interleaved.fq
scripts/: add_mismatches.pl  arrows_to_stats.pl  best_verify.pl  bowtie-hbb.sh  bs_mapability.pl  build_test.sh  categorize_fastq_reads.pl  check_ebwt_consistency.pl  check_fasta_patdump.pl  check_fastq_patdump.pl  colorize_fasta.pl  colorize_fastq.pl  compare_to_vmatch.pl  convert_quals.pl  dc.mk  diff_sample_tester.sh  do_test_fasta.pl  download_human_asms.sh  download_human_contigs.sh  ebwt_build_and_search.pl  extract_test_fasta.pl  fastq_to_tabbed.pl  filter_gprof.pl  fq_filter.pl  fq_qual_freqs.pl  fq_sanity.pl  fq_to_fa.pl  gen_dnamasks2colormask.pl  gen_lookup_tables.pl  human.pl  human_harness.mk  infer_fraglen.pl  make_a_mellifera.sh  make_a_thaliana.sh  make_a_thaliana_tair.sh  make_b_taurus.sh  make_c_elegans.sh  make_c_elegans_ws120.sh  make_c_familiaris.sh  make_canFam2.sh  (+57 more)
scripts/test/: all.sh  args.pl  btdata.py  btface.py  build_big.py  cs_dec.pl  cs_trim.pl  dataface.py  inspect.pl  large_idx.py  long_read.pl  random_bowtie_tests.pl  random_bowtie_tests.sh  random_bowtie_tests_p.sh  samtools.pl  simple_tests.pl  simple_tests.sh  test_blocked.py
scripts/test.pl/: cs_trim.pl
tests/chr22/: snippet1_qry.mfa  (+3 more)
(+193 files in other folders)
